vc-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: c:\Utils\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: vc-db
  name: vc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vc-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: c:\Utils\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/nat: "true"
        io.kompose.service: vc-db
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: Y
        - name: MSSQL_PID
          value: Express
        - name: SA_PASSWORD
          value: v!rto_Labs!
        image: mcr.microsoft.com/mssql/server:latest
        imagePullPolicy: ""
        name: vc-db
        ports:
        - containerPort: 1433
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
