vc-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vc-db
spec:
  ports:
  - name: "1433"
    port: 1433
    targetPort: 1433
  selector:
    app: vc-db
