vc-storefront-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: c:\Utils\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: vc-storefront-web
  name: vc-storefront-web
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  selector:
    io.kompose.service: vc-storefront-web
status:
  loadBalancer: {}
